[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/card/card_front.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/ShipporiAntique-Medium.otf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/deck_scene/list_view.gd" type="Script" id=3]
[ext_resource path="res://scenes/card/large_card_view.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.847059 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 2 )

[node name="DeckList" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="DeckContainer" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1200, 680 )
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="Hide" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -48.0
grow_horizontal = 0
grow_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "BACK"

[node name="DragMover" parent="." instance=ExtResource( 1 )]
unique_name_in_owner = true
visible = false

[node name="LargeCardView" parent="." instance=ExtResource( 4 )]
visible = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="pressed" from="Hide" to="." method="_on_Hide_pressed"]
